--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ html, button, input, select, textarea {
 	font-family: 'Open Sans', Helvetica, Arial, sans-serif, sansserif;
 }
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Arvo', 'Open Sans', Helvetica, Arial, sans-serif, sansserif;
+	font-family: 'Droid Serif', serif;
     font-weight: 700;
     color: #000;
 }
