--- a/style.css
+++ b/style.css
@@ -150,8 +150,19 @@ footer ul {
  */
 
 .bc-banner {
+	position: relative;
+}
+.bc-banner::after {
+	content: "";
 	background: url("img/bg.jpg") #eee center center;
 	background-size: cover;
+	opacity: 0.4;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	position: absolute;
+	z-index: -1;
 }
 .bc-banner img {
 	margin: 1em 0;
@@ -161,10 +172,14 @@ footer ul {
 	padding: 1em;
 	box-shadow: 0px 5px 14px #ddd;
 	min-height: 200px;
-	margin-bottom: 1em;
+	margin-bottom: 1.6em;
 }
 .carousel {
-	margin: 1em 0;
+	margin: 1.6em 0;
+}
+.carousel-caption p, .carousel-caption h3 {
+	color: #fff;
+	text-shadow: 5px 5px 5px #222;
 }
 
 
