--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ h1, h2, h3, h4, p, ul, li, ol, dl, blockquote, .post-statement, .statement {
  
 footer {
 	padding: 1em 0;
-	background-color: #eee;
+	background: url("img/footer-bg.png") #eee right top no-repeat;
 }
 footer .bc-info {
 	padding: 1em;
