--- a/style.css
+++ b/style.css
@@ -208,6 +208,10 @@ footer ul {
 .bc-content {
     margin-bottom: 2em;
 }
+.category-wine .entry-thumbnail {
+	float: left;
+	margin: 0 3em 3em 0;
+}
 
 /**
  * Wines
